SI-15 Edit the JobRepository Job filter functions to make it handle empty criteria from the client, also edit those in the Tests.